--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,11 +1,154 @@
-.card-img{
-    width: 50px;
+body {
+    background-color: rgba(0, 0, 0, 0.082);
 }
-.like button {
+
+
+.navbar {
+    background-color: white;
+}
+
+.container {
+    margin-top: 10vh;
+}
+.flex-container{
+    display: flex;
+    flex-wrap: nowrap;
+}
+.ingreser form{
+    width: 400px;
+    margin:100px 150px;
+    background-color: white; 
+    padding: 50px;
+}
+.ingreser form button{
+    margin-top:20px;
+    
+}
+.ingreser input{
+    margin-bottom:20px;
+}
+.presentation{
+    width: 400px;
+    margin: 100px 150px;
+}
+.col-md-3 {
+    display: flex;
+     flex-direction: column;
+     justify-content: center;
+ 
+ }
+
+.col-md-2 {
+   display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.produit{
+    width: 60vw;
+    margin-left: 10vw;
+    border-radius: 15px;
+}
+
+
+.card-img{
+    width: 80px;
+    height: 80px;
+    margin-left: 20px;
+}
+.col-md-3 .up {
 
     border-radius: 5px;
     border: 1px solid grey;
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 75px;
     background-color: white;
+}
+
+.up {
+    text-align: center;
+    padding-top: 10px;
+}
+.liked {
+    text-align: center;
+    padding-top: 10px;
+}
+.liked{
+
+    border-radius: 5px;
+    border: 1px solid rgb(231, 68, 9);
+    color: rgb(231, 68, 9);
+    width: 70px;
+    height: 75px;
+    background-color: white;
+
+}
+*{
+    box-sizing: border-box;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.37);
+    z-index: 1000;
+}
+
+.popup.active{
+    display: inline-block;
+}
+
+.popup-content{
+    position: fixed;
+    left: 50%;
+    top: 5%;
+    transform: translateX(-50%);
+    height: auto;
+    min-width: auto;
+    width: auto;
+    border: 1px solid rgb(22, 21, 21);
+    display: flex;
+    flex-direction: column;
+    opacity: 0;
+    overflow: scroll;
+}
+
+.popup-content.active {
+
+    opacity: 1;
+    top: 10%;
+    width: 50%;
+    height: auto;
+    bottom: 10%;
+    
+}
+
+.popup-header {
+    
+    background-color: rgb(55, 66, 223);
+    color: black;
+}
+
+.popup-body{
+    height: 80%;
+    padding: 2%;
+    background-color: white;
+}
+.popup-body #carouselExampleIndicators {
+    width: 100%;
+}
+.popup-footer{
+
+    height: 10%;
+    padding: 2%;
+    display: flex;
+    justify-content: flex-end;
+    background-color: rgb(233, 233, 233);
+}
+textarea{ 
+    width: 900px;
 }
