--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -29,9 +29,11 @@ body {
     display: flex;
     flex-wrap: nowrap;
 }
+
 .ingreser form{
     width: 400px;
-    margin:100px 150px;
+    margin-top: 100px;
+    height: 600px;
     background-color: white; 
     padding: 50px;
 }
@@ -43,25 +45,14 @@ body {
     margin-bottom:20px;
 }
 .presentation{
-    width: 400px;
-    margin: 100px 150px;
+    width: 200px;
+    margin: 100px 300px;
+    
 }
-/* .col-md-3 {
-    display: flex;
-     flex-direction: column;
-     justify-content: center;
- 
- }
-.col-md-2 {
-   display: flex;
-    flex-direction: column;
-    justify-content: center;
-} */
-.produit{
-    width: 60vw;
-    margin-left: 10vw;
-    border-radius: 15px;
+.entrada{
+   background-image: url(images/hunt.gif); 
 }
+
 
 
 .card-img{
@@ -82,20 +73,16 @@ body {
     text-align: center;
     padding-top: 10px;
 }
-.liked {
+.ups {
     text-align: center;
     padding-top: 10px;
 }
-.liked{
-
-    border-radius: 5px;
-    border: 1px solid rgb(231, 68, 9);
+.liked {
+    text-align: center;
+    padding-top: 10px; 
     color: rgb(231, 68, 9);
-    width: 70px;
-    height: 75px;
-    background-color: white;
-
 }
+
 *{
     box-sizing: border-box;
 }
@@ -194,4 +181,151 @@ textarea{
     border-radius: 50px;
     text-align: center;
     font-size: x-large;
+}
+.btnClick:active {
+    font-size: 30px;
+   
+}
+.images{
+    display: flex;
+    flex-flow: row nowrap;
+    margin-bottom: 20px;
+}
+
+.images img{
+    margin: 20px;
+}
+.img1:hover{
+    transform:scale(1.65);
+}
+.img2:hover{
+    transform:scale(1.65);
+}
+.img3:hover{
+    transform:scale(1.65);
+}
+@media (max-width: 800px) {
+    .images {
+      flex-direction: column;
+      justify-content: center;
+      width: 150px;
+      margin-left:15px ;
+    }
+    .box-product{
+    text-align: center;
+    }
+    .img-logo{
+    margin: 10px 60px;
+    }
+    .form{
+        width: 100px;
+    }
+    .card-img-top {
+        width: 30px;
+        border-top-left-radius: calc(.25rem - 1px);
+        border-top-right-radius: calc(.25rem - 1px);
+    }
+    .search{
+        background-color: beige;
+        width: 100px;
+    }
+    .title{
+        font-size: 15px;
+        font-weight: bolder;
+    }
+    .produit{
+        border-radius: 15px;
+    }
+  }
+  .selection{
+    background-color:rgb(214, 231, 236);;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (min-width: 800px){
+    .img-logo{
+        margin: 10px 350px;
+    } 
+    .images{
+        width: 250px;
+        
+    }
+    .form{
+        margin-right: 600px;
+    }
+    .card-img-top {
+        width: 50px;
+        border-top-left-radius: calc(.25rem - 1px);
+        border-top-right-radius: calc(.25rem - 1px);
+    }
+    .search{
+        background-color: beige;
+        width: 220px;
+    }
+    .title{
+        font-size: 15px;
+        font-weight: bolder;
+    }
+    .produit{
+        width: 60vw;
+        margin-left: 5vw;
+        border-radius: 15px;
+    }
+    .selection{
+        background-color: rgb(214, 231, 236);;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+  }
+
+
+#product{
+    text-align: center;
+}
+.card-img-top {
+    width: 50px;
+    border-top-left-radius: calc(.25rem - 1px);
+    border-top-right-radius: calc(.25rem - 1px);
+}
+.search{
+    background-color: beige;
+    width: 220px;
+}
+.title{
+    font-size: 15px;
+    font-weight: bolder;
+}
+
+
+.selection button {
+    background-color: rgb(214, 231, 236);
+    border: 1px solid rgb(214, 231, 236);
+    color: rgb(70, 61, 61);
+}
+.ion{
+    font-size: 15px;
+}
+.modals{
+        background-color: #aaa;
+        width: 700px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 15px;
+        padding: 10px;
+    
+}
+.modals:hover {
+    width: 50vw;
+ box-shadow: 10px 10px 10px 10px #aaa;
+
+}
+.titles{
+    font-size: 20px;
+    font-weight: bolder;
+}
+.hunt{
+    width: 350px;
+    height: 300px;
 }
